# ros2_active_stereo

./: CMakeLists.txt  package.xml
include/: FringePattern.hpp  FringeProcess.hpp  GrayCode.hpp  image_project.hpp  monitor_utils.hpp  noise_image.hpp  stereo_acquisition.hpp  stereo_process.hpp
ros2_active_stereo/: CMakeLists.txt  package.xml
ros2_active_stereo/config/: lab_active.yaml
ros2_active_stereo/include/: DebugVisualizer.hpp  FringeProcess.hpp  stereo_acquisition.hpp  stereo_process.hpp
ros2_active_stereo/launch/: debug.launch.py  triangulation.launch.py
ros2_active_stereo/scripts/: SpatialCorrelation_pytorch.py  fringe_process.py  fringe_process_node.py  triangulation_node.py
ros2_active_stereo/src/: monitor_utils.cpp  noise_image.cpp  stereo_acquisition.cpp  stereo_acquisition_node.cpp  stereo_process.cpp  stereo_process_node.cpp
ros2_active_stereo/src/structured-light/: FringePattern.cpp  FringeProcess.cpp
ros2_active_stereo_msgs/: CMakeLists.txt  package.xml
ros2_active_stereo_msgs/msg/: ActiveStatus.msg
src/: image_project.cpp  image_project_node.cpp  stereo_acquisition.cpp  stereo_process.cpp
src/structured-light/: FringePattern.cpp  FringeProcess.cpp  GrayCode.cpp
